unpackaged/main/default/objects/fferpcore__DSCustomMapping__c/fields/fferpcore__AdditionalLookupField__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__AdditionalLookupField__c</fullName>
    <description>The API name of the field that is used in combination with the Name field to locate the related record. This optional field is used in lookup mappings to identify a single record when record names are not unique.</description>
    <label>Additional Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>