unpackaged/main/default/objects/fferpcore__DSCustomMapping__c/fields/fferpcore__Condition__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Condition__c</fullName>
    <description>The message key that determines whether a mapping is conditionally applied to a target. If specified, the message value must evaluate to true for the mapping to be applied.</description>
    <inlineHelpText>The message key that determines whether a mapping is applied to a target. If specified, the message value must evaluate to true for the mapping to be applied.</inlineHelpText>
    <label>Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>