unpackaged/main/default/objects/fferpcore__DSCustomMapping__c/fields/fferpcore__CorrelationKey__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__CorrelationKey__c</fullName>
    <label>Correlation Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>