unpackaged/main/default/objects/fferpcore__DSCustomMapping__c/fields/fferpcore__DataTransformationTable__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__DataTransformationTable__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Data Transformation Table being used by this Declarative Subscription Custom Mapping.</description>
    <inlineHelpText>The Data Transformation Table being used by this Declarative Subscription Custom Mapping.</inlineHelpText>
    <label>Data Transformation Table</label>
    <referenceTo>fferpcore__DataTransformationTable__c</referenceTo>
    <relationshipLabel>Declarative Subscription Custom Mappings</relationshipLabel>
    <relationshipName>Declarative_SubscriptionCustomMappings</relationshipName>
    <type>Lookup</type>
</CustomField>