unpackaged/main/default/objects/fferpcore__DSCustomMapping__c/fields/fferpcore__Filters__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Filters__c</fullName>
    <description>For child mappings, the message key that determines whether records are created or updated. For records to be created or updated, the message value must evaluate to true.</description>
    <label>Filter</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>