unpackaged/main/default/objects/fferpcore__DSCustomMapping__c/fields/fferpcore__JsonPath__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__JsonPath__c</fullName>
    <description>Key that represents where to extract data from the message body.</description>
    <label>JSON Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>