unpackaged/main/default/objects/fferpcore__DSCustomMapping__c/fields/fferpcore__LookupField__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__LookupField__c</fullName>
    <description>The API name of the primary field that is used to locate the related record.</description>
    <label>Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>