unpackaged/main/default/objects/fferpcore__DSCustomMapping__c/fields/fferpcore__Sequence__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Sequence__c</fullName>
    <description>Order that the mappings have to be built.</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>