unpackaged/main/default/objects/fferpcore__DSCustomMapping__c/fields/fferpcore__Subscription__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Subscription__c</fullName>
    <label>Subscription</label>
    <referenceTo>fferpcore__MessagingSubscription__c</referenceTo>
    <relationshipLabel>Custom Mapping</relationshipLabel>
    <relationshipName>CustomMapping</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>