unpackaged/main/default/objects/fferpcore__DSCustomMapping__c/fields/fferpcore__TargetField__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TargetField__c</fullName>
    <description>Target field to map the message data on to.</description>
    <label>Target Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>