unpackaged/main/default/objects/fferpcore__DSCustomMapping__c/fields/fferpcore__Type__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>